package com.health_insurance.phm_processes;

import org.kie.api.definition.type.*;
import com.fasterxml.jackson.core.JsonProcessingException;
import com.fasterxml.jackson.databind.ObjectMapper;
import java.io.Serializable;

/**
 * This class was automatically generated by the data modeler tool.
 */

@Label("Service Response")
@Description("Response from a REST API Call.")
public class Response implements Serializable {

	private static final long serialVersionUID = -7483068251987822005L;

	@Label(value = "Task")
	private Task task;
	@Label(value = "Task Actor Assignment")
	private TaskActorAssignment assignment;
	@Label(value = "Reminder")
	private com.health_insurance.phm_processes.Reminder reminder;

	public Response() {
	}

	public Task getTask() {
		return this.task;
	}

	public void setTask(
			Task task) {
		this.task = task;
	}

	public TaskActorAssignment getAssignment() {
		return this.assignment;
	}

	public void setAssignment(
			TaskActorAssignment assignment) {
		this.assignment = assignment;
	}

	public com.health_insurance.phm_processes.Reminder getReminder() {
		return this.reminder;
	}

	public void setReminder(com.health_insurance.phm_processes.Reminder reminder) {
		this.reminder = reminder;
	}

	@Override
	public String toString() {
		final ObjectMapper objectMapper = new ObjectMapper();
		try {
			return objectMapper.writeValueAsString(this);
		} catch (JsonProcessingException e) {
			e.printStackTrace();
		}
		return "";
	}
	
    public Response(
    		Task task,
			TaskActorAssignment assignment,
			com.health_insurance.phm_processes.Reminder reminder) {
		this.task = task;
		this.assignment = assignment;
		this.reminder = reminder;
	}

}