package com.health_insurance.phm_processes;

import java.io.Serializable;

import com.fasterxml.jackson.core.JsonProcessingException;
import com.fasterxml.jackson.databind.ObjectMapper;

import org.kie.api.definition.type.*;
/**
 * This class was automatically generated by the data modeler tool.
 */
@Label(value = "Task Actor Assignment")
public class TaskActorAssignment implements Serializable {

	private static final long serialVersionUID = 3058923314416600036L;

	@Label(value = "Actor")
	@Description(value = "The actor of the task.")
	private String actor;
	@Label(value = "Channel")
	@Description(value = "The application where the task is performed.")
	private String channel;
	@Label(value = "Escalation Actor")
	@Description(value = "The actor of the escalation.")
	private String escalationActor;
	@Label(value = "EscalationChannel")
	@Description(value = "The application where the escalation is performed.")
	private String escalationChannel;

	public TaskActorAssignment() {
	}

	public String getActor() {
		return this.actor;
	}

	public void setActor(String actor) {
		this.actor = actor;
	}

	public String getChannel() {
		return this.channel;
	}

	public void setChannel(String channel) {
		this.channel = channel;
	}

	public String getEscalationActor() {
		return this.escalationActor;
	}

	public void setEscalationActor(String escalationActor) {
		this.escalationActor = escalationActor;
	}

	public String getEscalationChannel() {
		return this.escalationChannel;
	}

	public void setEscalationChannel(String escalationChannel) {
		this.escalationChannel = escalationChannel;
	}

	@Override
	public String toString() {
		final ObjectMapper objectMapper = new ObjectMapper();
		try {
			return objectMapper.writeValueAsString(this);
		} catch (JsonProcessingException e) {
			e.printStackTrace();
		}
		return "";
	}
	
	public TaskActorAssignment(String actor,
			String channel, String escalationActor,
			String escalationChannel) {
		this.actor = actor;
		this.channel = channel;
		this.escalationActor = escalationActor;
		this.escalationChannel = escalationChannel;
	}

}