package com.health_insurance.phm_processes;

import org.kie.api.definition.type.*;
import com.fasterxml.jackson.core.JsonProcessingException;
import com.fasterxml.jackson.databind.ObjectMapper;
import java.io.Serializable;
import java.time.LocalDateTime;

/**
 * This class was automatically generated by the data modeler tool.
 */

public class TaskSuppressionPeriod implements Serializable {

	private static final long serialVersionUID = 7090464708610446476L;

	@Label(value = "Start")
	private java.time.LocalDateTime start;
	@org.kie.api.definition.type.Label(value = "End")
	private java.time.LocalDateTime end;

	public TaskSuppressionPeriod() {
	}

	public java.time.LocalDateTime getStart() {
		return this.start;
	}

	public void setStart(LocalDateTime start) {
		this.start = start;
	}

	public LocalDateTime getEnd() {
		return this.end;
	}

	public void setEnd(LocalDateTime end) {
		this.end = end;
	}

	@Override
	public String toString() {
		final ObjectMapper objectMapper = new ObjectMapper();
		try {
			return objectMapper.writeValueAsString(this);
		} catch (JsonProcessingException e) {
			e.printStackTrace();
		}
		return "";
	}

	public TaskSuppressionPeriod(LocalDateTime start,
			LocalDateTime end) {
		this.start = start;
		this.end = end;
	}

}