@startuml

title __PHM-PROCESSES's Class Diagram__\n

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.Reminder {
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.Response {
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.Task {
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.TaskActorAssignment {
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.TaskSuppressionPeriod {
    }
  }
  

  com.health_insurance.phm_processes.Reminder .up.|> java.io.Serializable
  com.health_insurance.phm_processes.Response .up.|> java.io.Serializable
  com.health_insurance.phm_processes.Response o-- com.health_insurance.phm_processes.TaskActorAssignment : assignment
  com.health_insurance.phm_processes.Response o-- com.health_insurance.phm_processes.Reminder : reminder
  com.health_insurance.phm_processes.Response o-- com.health_insurance.phm_processes.Task : task
  com.health_insurance.phm_processes.Task .up.|> java.io.Serializable
  com.health_insurance.phm_processes.Task o-- com.health_insurance.phm_processes.TaskSuppressionPeriod : taskSuppressionPeriod
  com.health_insurance.phm_processes.TaskActorAssignment .up.|> java.io.Serializable
  com.health_insurance.phm_processes.TaskSuppressionPeriod .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
